Proyectos/Proyecto3/y.output
   0  $accept : input $end

   1  input :
   2        | aux0

   3  aux0 : SALTO
   4       | stmt
   5       | aux0 SALTO
   6       | aux0 stmt

   7  stmt : simple_stmt
   8       | compound_stmt

   9  compound_stmt : if_stmt
  10                | while_stmt

  11  if_stmt : IF test DOBLEPUNTO suite ELSE DOBLEPUNTO suite
  12          | IF test DOBLEPUNTO suite

  13  while_stmt : WHILE test DOBLEPUNTO suite

  14  suite : simple_stmt
  15        | SALTO INDENTA auxstmt DEINDENTA

  16  auxstmt : stmt
  17          | auxstmt stmt

  18  simple_stmt : small_stmt SALTO

  19  small_stmt : expr_stmt
  20             | print_stmt

  21  expr_stmt : test
  22            | test EQ test

  23  print_stmt : PRINT test

  24  test : or_test

  25  or_test : and_test
  26          | aux2 and_test

  27  aux2 : and_test OR
  28       | aux2 and_test OR

  29  and_test : not_test
  30           | aux7 not_test

  31  aux7 : not_test AND
  32       | aux7 not_test AND

  33  not_test : NOT not_test
  34           | comparison

  35  comparison : expr
  36             | aux4 expr

  37  aux4 : expr comp_op
  38       | aux4 expr comp_op

  39  comp_op : LE
  40          | GR
  41          | EQUALS
  42          | GRQ
  43          | LEQ
  44          | DIFF

  45  expr : term
  46       | aux8 term

  47  aux8 : term MAS
  48       | term MENOS
  49       | aux8 term MAS
  50       | aux8 term MENOS

  51  term : factor
  52       | aux9 factor

  53  aux9 : factor POR
  54       | factor DIVENTERA
  55       | factor MODULO
  56       | factor DIV
  57       | aux9 factor POR
  58       | aux9 factor DIVENTERA
  59       | aux9 factor MODULO
  60       | aux9 factor DIV

  61  factor : MAS factor
  62         | MENOS factor
  63         | power

  64  power : atom
  65        | atom POTENCIA factor

  66  atom : IDENTIFICADOR
  67       | ENTERO
  68       | CADENA
  69       | REAL
  70       | BOOLEANO
  71       | PA test PC

state 0
	$accept : . input $end  (0)
	input : .  (1)

	CADENA  shift 1
	SALTO  shift 2
	IDENTIFICADOR  shift 3
	ENTERO  shift 4
	REAL  shift 5
	BOOLEANO  shift 6
	NOT  shift 7
	WHILE  shift 8
	PRINT  shift 9
	IF  shift 10
	MAS  shift 11
	MENOS  shift 12
	PA  shift 13
	$end  reduce 1

	input  goto 14
	aux0  goto 15
	stmt  goto 16
	simple_stmt  goto 17
	compound_stmt  goto 18
	if_stmt  goto 19
	while_stmt  goto 20
	test  goto 21
	small_stmt  goto 22
	expr_stmt  goto 23
	print_stmt  goto 24
	or_test  goto 25
	and_test  goto 26
	aux2  goto 27
	not_test  goto 28
	aux7  goto 29
	comparison  goto 30
	expr  goto 31
	aux4  goto 32
	term  goto 33
	aux8  goto 34
	factor  goto 35
	aux9  goto 36
	power  goto 37
	atom  goto 38


state 1
	atom : CADENA .  (68)

	.  reduce 68


state 2
	aux0 : SALTO .  (3)

	.  reduce 3


state 3
	atom : IDENTIFICADOR .  (66)

	.  reduce 66


state 4
	atom : ENTERO .  (67)

	.  reduce 67


state 5
	atom : REAL .  (69)

	.  reduce 69


state 6
	atom : BOOLEANO .  (70)

	.  reduce 70


state 7
	not_test : NOT . not_test  (33)

	CADENA  shift 1
	IDENTIFICADOR  shift 3
	ENTERO  shift 4
	REAL  shift 5
	BOOLEANO  shift 6
	NOT  shift 7
	MAS  shift 11
	MENOS  shift 12
	PA  shift 13
	.  error

	not_test  goto 39
	comparison  goto 30
	expr  goto 31
	aux4  goto 32
	term  goto 33
	aux8  goto 34
	factor  goto 35
	aux9  goto 36
	power  goto 37
	atom  goto 38


state 8
	while_stmt : WHILE . test DOBLEPUNTO suite  (13)

	CADENA  shift 1
	IDENTIFICADOR  shift 3
	ENTERO  shift 4
	REAL  shift 5
	BOOLEANO  shift 6
	NOT  shift 7
	MAS  shift 11
	MENOS  shift 12
	PA  shift 13
	.  error

	test  goto 40
	or_test  goto 25
	and_test  goto 26
	aux2  goto 27
	not_test  goto 28
	aux7  goto 29
	comparison  goto 30
	expr  goto 31
	aux4  goto 32
	term  goto 33
	aux8  goto 34
	factor  goto 35
	aux9  goto 36
	power  goto 37
	atom  goto 38


state 9
	print_stmt : PRINT . test  (23)

	CADENA  shift 1
	IDENTIFICADOR  shift 3
	ENTERO  shift 4
	REAL  shift 5
	BOOLEANO  shift 6
	NOT  shift 7
	MAS  shift 11
	MENOS  shift 12
	PA  shift 13
	.  error

	test  goto 41
	or_test  goto 25
	and_test  goto 26
	aux2  goto 27
	not_test  goto 28
	aux7  goto 29
	comparison  goto 30
	expr  goto 31
	aux4  goto 32
	term  goto 33
	aux8  goto 34
	factor  goto 35
	aux9  goto 36
	power  goto 37
	atom  goto 38


state 10
	if_stmt : IF . test DOBLEPUNTO suite ELSE DOBLEPUNTO suite  (11)
	if_stmt : IF . test DOBLEPUNTO suite  (12)

	CADENA  shift 1
	IDENTIFICADOR  shift 3
	ENTERO  shift 4
	REAL  shift 5
	BOOLEANO  shift 6
	NOT  shift 7
	MAS  shift 11
	MENOS  shift 12
	PA  shift 13
	.  error

	test  goto 42
	or_test  goto 25
	and_test  goto 26
	aux2  goto 27
	not_test  goto 28
	aux7  goto 29
	comparison  goto 30
	expr  goto 31
	aux4  goto 32
	term  goto 33
	aux8  goto 34
	factor  goto 35
	aux9  goto 36
	power  goto 37
	atom  goto 38


state 11
	factor : MAS . factor  (61)

	CADENA  shift 1
	IDENTIFICADOR  shift 3
	ENTERO  shift 4
	REAL  shift 5
	BOOLEANO  shift 6
	MAS  shift 11
	MENOS  shift 12
	PA  shift 13
	.  error

	factor  goto 43
	power  goto 37
	atom  goto 38


state 12
	factor : MENOS . factor  (62)

	CADENA  shift 1
	IDENTIFICADOR  shift 3
	ENTERO  shift 4
	REAL  shift 5
	BOOLEANO  shift 6
	MAS  shift 11
	MENOS  shift 12
	PA  shift 13
	.  error

	factor  goto 44
	power  goto 37
	atom  goto 38


state 13
	atom : PA . test PC  (71)

	CADENA  shift 1
	IDENTIFICADOR  shift 3
	ENTERO  shift 4
	REAL  shift 5
	BOOLEANO  shift 6
	NOT  shift 7
	MAS  shift 11
	MENOS  shift 12
	PA  shift 13
	.  error

	test  goto 45
	or_test  goto 25
	and_test  goto 26
	aux2  goto 27
	not_test  goto 28
	aux7  goto 29
	comparison  goto 30
	expr  goto 31
	aux4  goto 32
	term  goto 33
	aux8  goto 34
	factor  goto 35
	aux9  goto 36
	power  goto 37
	atom  goto 38


state 14
	$accept : input . $end  (0)

	$end  accept


state 15
	input : aux0 .  (2)
	aux0 : aux0 . SALTO  (5)
	aux0 : aux0 . stmt  (6)

	CADENA  shift 1
	SALTO  shift 46
	IDENTIFICADOR  shift 3
	ENTERO  shift 4
	REAL  shift 5
	BOOLEANO  shift 6
	NOT  shift 7
	WHILE  shift 8
	PRINT  shift 9
	IF  shift 10
	MAS  shift 11
	MENOS  shift 12
	PA  shift 13
	$end  reduce 2

	stmt  goto 47
	simple_stmt  goto 17
	compound_stmt  goto 18
	if_stmt  goto 19
	while_stmt  goto 20
	test  goto 21
	small_stmt  goto 22
	expr_stmt  goto 23
	print_stmt  goto 24
	or_test  goto 25
	and_test  goto 26
	aux2  goto 27
	not_test  goto 28
	aux7  goto 29
	comparison  goto 30
	expr  goto 31
	aux4  goto 32
	term  goto 33
	aux8  goto 34
	factor  goto 35
	aux9  goto 36
	power  goto 37
	atom  goto 38


state 16
	aux0 : stmt .  (4)

	.  reduce 4


state 17
	stmt : simple_stmt .  (7)

	.  reduce 7


state 18
	stmt : compound_stmt .  (8)

	.  reduce 8


state 19
	compound_stmt : if_stmt .  (9)

	.  reduce 9


state 20
	compound_stmt : while_stmt .  (10)

	.  reduce 10


state 21
	expr_stmt : test .  (21)
	expr_stmt : test . EQ test  (22)

	EQ  shift 48
	SALTO  reduce 21


state 22
	simple_stmt : small_stmt . SALTO  (18)

	SALTO  shift 49
	.  error


state 23
	small_stmt : expr_stmt .  (19)

	.  reduce 19


state 24
	small_stmt : print_stmt .  (20)

	.  reduce 20


state 25
	test : or_test .  (24)

	.  reduce 24


state 26
	or_test : and_test .  (25)
	aux2 : and_test . OR  (27)

	OR  shift 50
	SALTO  reduce 25
	EQ  reduce 25
	PC  reduce 25
	DOBLEPUNTO  reduce 25


state 27
	or_test : aux2 . and_test  (26)
	aux2 : aux2 . and_test OR  (28)

	CADENA  shift 1
	IDENTIFICADOR  shift 3
	ENTERO  shift 4
	REAL  shift 5
	BOOLEANO  shift 6
	NOT  shift 7
	MAS  shift 11
	MENOS  shift 12
	PA  shift 13
	.  error

	and_test  goto 51
	not_test  goto 28
	aux7  goto 29
	comparison  goto 30
	expr  goto 31
	aux4  goto 32
	term  goto 33
	aux8  goto 34
	factor  goto 35
	aux9  goto 36
	power  goto 37
	atom  goto 38


state 28
	and_test : not_test .  (29)
	aux7 : not_test . AND  (31)

	AND  shift 52
	SALTO  reduce 29
	OR  reduce 29
	EQ  reduce 29
	PC  reduce 29
	DOBLEPUNTO  reduce 29


state 29
	and_test : aux7 . not_test  (30)
	aux7 : aux7 . not_test AND  (32)

	CADENA  shift 1
	IDENTIFICADOR  shift 3
	ENTERO  shift 4
	REAL  shift 5
	BOOLEANO  shift 6
	NOT  shift 7
	MAS  shift 11
	MENOS  shift 12
	PA  shift 13
	.  error

	not_test  goto 53
	comparison  goto 30
	expr  goto 31
	aux4  goto 32
	term  goto 33
	aux8  goto 34
	factor  goto 35
	aux9  goto 36
	power  goto 37
	atom  goto 38


state 30
	not_test : comparison .  (34)

	.  reduce 34


state 31
	comparison : expr .  (35)
	aux4 : expr . comp_op  (37)

	LE  shift 54
	GR  shift 55
	LEQ  shift 56
	GRQ  shift 57
	EQUALS  shift 58
	DIFF  shift 59
	SALTO  reduce 35
	AND  reduce 35
	OR  reduce 35
	EQ  reduce 35
	PC  reduce 35
	DOBLEPUNTO  reduce 35

	comp_op  goto 60


state 32
	comparison : aux4 . expr  (36)
	aux4 : aux4 . expr comp_op  (38)

	CADENA  shift 1
	IDENTIFICADOR  shift 3
	ENTERO  shift 4
	REAL  shift 5
	BOOLEANO  shift 6
	MAS  shift 11
	MENOS  shift 12
	PA  shift 13
	.  error

	expr  goto 61
	term  goto 33
	aux8  goto 34
	factor  goto 35
	aux9  goto 36
	power  goto 37
	atom  goto 38


state 33
	expr : term .  (45)
	aux8 : term . MAS  (47)
	aux8 : term . MENOS  (48)

	MAS  shift 62
	MENOS  shift 63
	SALTO  reduce 45
	AND  reduce 45
	OR  reduce 45
	LE  reduce 45
	GR  reduce 45
	LEQ  reduce 45
	GRQ  reduce 45
	EQUALS  reduce 45
	DIFF  reduce 45
	EQ  reduce 45
	PC  reduce 45
	DOBLEPUNTO  reduce 45


state 34
	expr : aux8 . term  (46)
	aux8 : aux8 . term MAS  (49)
	aux8 : aux8 . term MENOS  (50)

	CADENA  shift 1
	IDENTIFICADOR  shift 3
	ENTERO  shift 4
	REAL  shift 5
	BOOLEANO  shift 6
	MAS  shift 11
	MENOS  shift 12
	PA  shift 13
	.  error

	term  goto 64
	factor  goto 35
	aux9  goto 36
	power  goto 37
	atom  goto 38


state 35
	term : factor .  (51)
	aux9 : factor . POR  (53)
	aux9 : factor . DIVENTERA  (54)
	aux9 : factor . MODULO  (55)
	aux9 : factor . DIV  (56)

	POR  shift 65
	DIV  shift 66
	DIVENTERA  shift 67
	MODULO  shift 68
	SALTO  reduce 51
	AND  reduce 51
	OR  reduce 51
	MAS  reduce 51
	MENOS  reduce 51
	LE  reduce 51
	GR  reduce 51
	LEQ  reduce 51
	GRQ  reduce 51
	EQUALS  reduce 51
	DIFF  reduce 51
	EQ  reduce 51
	PC  reduce 51
	DOBLEPUNTO  reduce 51


state 36
	term : aux9 . factor  (52)
	aux9 : aux9 . factor POR  (57)
	aux9 : aux9 . factor DIVENTERA  (58)
	aux9 : aux9 . factor MODULO  (59)
	aux9 : aux9 . factor DIV  (60)

	CADENA  shift 1
	IDENTIFICADOR  shift 3
	ENTERO  shift 4
	REAL  shift 5
	BOOLEANO  shift 6
	MAS  shift 11
	MENOS  shift 12
	PA  shift 13
	.  error

	factor  goto 69
	power  goto 37
	atom  goto 38


state 37
	factor : power .  (63)

	.  reduce 63


state 38
	power : atom .  (64)
	power : atom . POTENCIA factor  (65)

	POTENCIA  shift 70
	SALTO  reduce 64
	AND  reduce 64
	OR  reduce 64
	MAS  reduce 64
	MENOS  reduce 64
	POR  reduce 64
	DIV  reduce 64
	DIVENTERA  reduce 64
	MODULO  reduce 64
	LE  reduce 64
	GR  reduce 64
	LEQ  reduce 64
	GRQ  reduce 64
	EQUALS  reduce 64
	DIFF  reduce 64
	EQ  reduce 64
	PC  reduce 64
	DOBLEPUNTO  reduce 64


state 39
	not_test : NOT not_test .  (33)

	.  reduce 33


state 40
	while_stmt : WHILE test . DOBLEPUNTO suite  (13)

	DOBLEPUNTO  shift 71
	.  error


state 41
	print_stmt : PRINT test .  (23)

	.  reduce 23


state 42
	if_stmt : IF test . DOBLEPUNTO suite ELSE DOBLEPUNTO suite  (11)
	if_stmt : IF test . DOBLEPUNTO suite  (12)

	DOBLEPUNTO  shift 72
	.  error


state 43
	factor : MAS factor .  (61)

	.  reduce 61


state 44
	factor : MENOS factor .  (62)

	.  reduce 62


state 45
	atom : PA test . PC  (71)

	PC  shift 73
	.  error


state 46
	aux0 : aux0 SALTO .  (5)

	.  reduce 5


state 47
	aux0 : aux0 stmt .  (6)

	.  reduce 6


state 48
	expr_stmt : test EQ . test  (22)

	CADENA  shift 1
	IDENTIFICADOR  shift 3
	ENTERO  shift 4
	REAL  shift 5
	BOOLEANO  shift 6
	NOT  shift 7
	MAS  shift 11
	MENOS  shift 12
	PA  shift 13
	.  error

	test  goto 74
	or_test  goto 25
	and_test  goto 26
	aux2  goto 27
	not_test  goto 28
	aux7  goto 29
	comparison  goto 30
	expr  goto 31
	aux4  goto 32
	term  goto 33
	aux8  goto 34
	factor  goto 35
	aux9  goto 36
	power  goto 37
	atom  goto 38


state 49
	simple_stmt : small_stmt SALTO .  (18)

	.  reduce 18


state 50
	aux2 : and_test OR .  (27)

	.  reduce 27


state 51
	or_test : aux2 and_test .  (26)
	aux2 : aux2 and_test . OR  (28)

	OR  shift 75
	SALTO  reduce 26
	EQ  reduce 26
	PC  reduce 26
	DOBLEPUNTO  reduce 26


state 52
	aux7 : not_test AND .  (31)

	.  reduce 31


state 53
	and_test : aux7 not_test .  (30)
	aux7 : aux7 not_test . AND  (32)

	AND  shift 76
	SALTO  reduce 30
	OR  reduce 30
	EQ  reduce 30
	PC  reduce 30
	DOBLEPUNTO  reduce 30


state 54
	comp_op : LE .  (39)

	.  reduce 39


state 55
	comp_op : GR .  (40)

	.  reduce 40


state 56
	comp_op : LEQ .  (43)

	.  reduce 43


state 57
	comp_op : GRQ .  (42)

	.  reduce 42


state 58
	comp_op : EQUALS .  (41)

	.  reduce 41


state 59
	comp_op : DIFF .  (44)

	.  reduce 44


state 60
	aux4 : expr comp_op .  (37)

	.  reduce 37


state 61
	comparison : aux4 expr .  (36)
	aux4 : aux4 expr . comp_op  (38)

	LE  shift 54
	GR  shift 55
	LEQ  shift 56
	GRQ  shift 57
	EQUALS  shift 58
	DIFF  shift 59
	SALTO  reduce 36
	AND  reduce 36
	OR  reduce 36
	EQ  reduce 36
	PC  reduce 36
	DOBLEPUNTO  reduce 36

	comp_op  goto 77


state 62
	aux8 : term MAS .  (47)

	.  reduce 47


state 63
	aux8 : term MENOS .  (48)

	.  reduce 48


state 64
	expr : aux8 term .  (46)
	aux8 : aux8 term . MAS  (49)
	aux8 : aux8 term . MENOS  (50)

	MAS  shift 78
	MENOS  shift 79
	SALTO  reduce 46
	AND  reduce 46
	OR  reduce 46
	LE  reduce 46
	GR  reduce 46
	LEQ  reduce 46
	GRQ  reduce 46
	EQUALS  reduce 46
	DIFF  reduce 46
	EQ  reduce 46
	PC  reduce 46
	DOBLEPUNTO  reduce 46


state 65
	aux9 : factor POR .  (53)

	.  reduce 53


state 66
	aux9 : factor DIV .  (56)

	.  reduce 56


state 67
	aux9 : factor DIVENTERA .  (54)

	.  reduce 54


state 68
	aux9 : factor MODULO .  (55)

	.  reduce 55


state 69
	term : aux9 factor .  (52)
	aux9 : aux9 factor . POR  (57)
	aux9 : aux9 factor . DIVENTERA  (58)
	aux9 : aux9 factor . MODULO  (59)
	aux9 : aux9 factor . DIV  (60)

	POR  shift 80
	DIV  shift 81
	DIVENTERA  shift 82
	MODULO  shift 83
	SALTO  reduce 52
	AND  reduce 52
	OR  reduce 52
	MAS  reduce 52
	MENOS  reduce 52
	LE  reduce 52
	GR  reduce 52
	LEQ  reduce 52
	GRQ  reduce 52
	EQUALS  reduce 52
	DIFF  reduce 52
	EQ  reduce 52
	PC  reduce 52
	DOBLEPUNTO  reduce 52


state 70
	power : atom POTENCIA . factor  (65)

	CADENA  shift 1
	IDENTIFICADOR  shift 3
	ENTERO  shift 4
	REAL  shift 5
	BOOLEANO  shift 6
	MAS  shift 11
	MENOS  shift 12
	PA  shift 13
	.  error

	factor  goto 84
	power  goto 37
	atom  goto 38


state 71
	while_stmt : WHILE test DOBLEPUNTO . suite  (13)

	CADENA  shift 1
	SALTO  shift 85
	IDENTIFICADOR  shift 3
	ENTERO  shift 4
	REAL  shift 5
	BOOLEANO  shift 6
	NOT  shift 7
	PRINT  shift 9
	MAS  shift 11
	MENOS  shift 12
	PA  shift 13
	.  error

	simple_stmt  goto 86
	test  goto 21
	suite  goto 87
	small_stmt  goto 22
	expr_stmt  goto 23
	print_stmt  goto 24
	or_test  goto 25
	and_test  goto 26
	aux2  goto 27
	not_test  goto 28
	aux7  goto 29
	comparison  goto 30
	expr  goto 31
	aux4  goto 32
	term  goto 33
	aux8  goto 34
	factor  goto 35
	aux9  goto 36
	power  goto 37
	atom  goto 38


state 72
	if_stmt : IF test DOBLEPUNTO . suite ELSE DOBLEPUNTO suite  (11)
	if_stmt : IF test DOBLEPUNTO . suite  (12)

	CADENA  shift 1
	SALTO  shift 85
	IDENTIFICADOR  shift 3
	ENTERO  shift 4
	REAL  shift 5
	BOOLEANO  shift 6
	NOT  shift 7
	PRINT  shift 9
	MAS  shift 11
	MENOS  shift 12
	PA  shift 13
	.  error

	simple_stmt  goto 86
	test  goto 21
	suite  goto 88
	small_stmt  goto 22
	expr_stmt  goto 23
	print_stmt  goto 24
	or_test  goto 25
	and_test  goto 26
	aux2  goto 27
	not_test  goto 28
	aux7  goto 29
	comparison  goto 30
	expr  goto 31
	aux4  goto 32
	term  goto 33
	aux8  goto 34
	factor  goto 35
	aux9  goto 36
	power  goto 37
	atom  goto 38


state 73
	atom : PA test PC .  (71)

	.  reduce 71


state 74
	expr_stmt : test EQ test .  (22)

	.  reduce 22


state 75
	aux2 : aux2 and_test OR .  (28)

	.  reduce 28


state 76
	aux7 : aux7 not_test AND .  (32)

	.  reduce 32


state 77
	aux4 : aux4 expr comp_op .  (38)

	.  reduce 38


state 78
	aux8 : aux8 term MAS .  (49)

	.  reduce 49


state 79
	aux8 : aux8 term MENOS .  (50)

	.  reduce 50


state 80
	aux9 : aux9 factor POR .  (57)

	.  reduce 57


state 81
	aux9 : aux9 factor DIV .  (60)

	.  reduce 60


state 82
	aux9 : aux9 factor DIVENTERA .  (58)

	.  reduce 58


state 83
	aux9 : aux9 factor MODULO .  (59)

	.  reduce 59


state 84
	power : atom POTENCIA factor .  (65)

	.  reduce 65


state 85
	suite : SALTO . INDENTA auxstmt DEINDENTA  (15)

	INDENTA  shift 89
	.  error


state 86
	suite : simple_stmt .  (14)

	.  reduce 14


state 87
	while_stmt : WHILE test DOBLEPUNTO suite .  (13)

	.  reduce 13


state 88
	if_stmt : IF test DOBLEPUNTO suite . ELSE DOBLEPUNTO suite  (11)
	if_stmt : IF test DOBLEPUNTO suite .  (12)

	ELSE  shift 90
	$end  reduce 12
	CADENA  reduce 12
	SALTO  reduce 12
	IDENTIFICADOR  reduce 12
	ENTERO  reduce 12
	REAL  reduce 12
	BOOLEANO  reduce 12
	DEINDENTA  reduce 12
	NOT  reduce 12
	WHILE  reduce 12
	PRINT  reduce 12
	IF  reduce 12
	MAS  reduce 12
	MENOS  reduce 12
	PA  reduce 12


state 89
	suite : SALTO INDENTA . auxstmt DEINDENTA  (15)

	CADENA  shift 1
	IDENTIFICADOR  shift 3
	ENTERO  shift 4
	REAL  shift 5
	BOOLEANO  shift 6
	NOT  shift 7
	WHILE  shift 8
	PRINT  shift 9
	IF  shift 10
	MAS  shift 11
	MENOS  shift 12
	PA  shift 13
	.  error

	stmt  goto 91
	simple_stmt  goto 17
	compound_stmt  goto 18
	if_stmt  goto 19
	while_stmt  goto 20
	test  goto 21
	auxstmt  goto 92
	small_stmt  goto 22
	expr_stmt  goto 23
	print_stmt  goto 24
	or_test  goto 25
	and_test  goto 26
	aux2  goto 27
	not_test  goto 28
	aux7  goto 29
	comparison  goto 30
	expr  goto 31
	aux4  goto 32
	term  goto 33
	aux8  goto 34
	factor  goto 35
	aux9  goto 36
	power  goto 37
	atom  goto 38


state 90
	if_stmt : IF test DOBLEPUNTO suite ELSE . DOBLEPUNTO suite  (11)

	DOBLEPUNTO  shift 93
	.  error


state 91
	auxstmt : stmt .  (16)

	.  reduce 16


state 92
	suite : SALTO INDENTA auxstmt . DEINDENTA  (15)
	auxstmt : auxstmt . stmt  (17)

	CADENA  shift 1
	IDENTIFICADOR  shift 3
	ENTERO  shift 4
	REAL  shift 5
	BOOLEANO  shift 6
	DEINDENTA  shift 94
	NOT  shift 7
	WHILE  shift 8
	PRINT  shift 9
	IF  shift 10
	MAS  shift 11
	MENOS  shift 12
	PA  shift 13
	.  error

	stmt  goto 95
	simple_stmt  goto 17
	compound_stmt  goto 18
	if_stmt  goto 19
	while_stmt  goto 20
	test  goto 21
	small_stmt  goto 22
	expr_stmt  goto 23
	print_stmt  goto 24
	or_test  goto 25
	and_test  goto 26
	aux2  goto 27
	not_test  goto 28
	aux7  goto 29
	comparison  goto 30
	expr  goto 31
	aux4  goto 32
	term  goto 33
	aux8  goto 34
	factor  goto 35
	aux9  goto 36
	power  goto 37
	atom  goto 38


state 93
	if_stmt : IF test DOBLEPUNTO suite ELSE DOBLEPUNTO . suite  (11)

	CADENA  shift 1
	SALTO  shift 85
	IDENTIFICADOR  shift 3
	ENTERO  shift 4
	REAL  shift 5
	BOOLEANO  shift 6
	NOT  shift 7
	PRINT  shift 9
	MAS  shift 11
	MENOS  shift 12
	PA  shift 13
	.  error
